# hse-secdev-course-project-Dolce-Vitah

./: .bandit  .dockerignore  .env.example  .hadolint.yml  .pre-commit-config.yaml  BRANCHES.md  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  filter.jq  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  wishlist-apparmor.profile
.github/: CODEOWNERS
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: README.md  metadata.txt  sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: sast_summary.md  semgrep.sarif
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: checkov_report.json  hadolint_report.json  hardening_summary.md  trivy_report.json
docs/: wishlist.md
docs/adr/: ADR-001-validation.md  ADR-002-errors.md  ADR-003-secrets.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
iac/: docker-compose.yaml
k8s/: deployment.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
policy/: waivers.yml
reports/: report.html
scripts/: export_sca_csv.py
security/: .gitleaks.toml  checkov.yaml  trivy.yaml
security/semgrep/: rules.yml
src/adapters/: database.py
src/app/: main.py  middleware.py  security.py
src/app/api/: auth.py  wishes.py
src/app/utils/: token_utils.py
src/domain/: models.py  schemas.py
src/shared/: errors.py
tests/: conftest.py  test.db  test_auth.py  test_file_upload.py  test_rfc7807_errors.py  test_security.py  test_wishes.py
(+8 files in other folders)
