[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wishlist_api"
version = "0.1.0"
description = "Wishlist API service"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Valentina" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
files = "src"

[tool.flake8]
max-line-length = 100
extend-select = ["B"]
exclude = [".venv","venv","build","dist"]
